<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_student_registration"
            android:textAllCaps="true"
            android:paddingTop="15dp"
            android:layout_marginStart="39dp"
            android:textAppearance="?android:textAppearance"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/email"
            app:layout_constraintVertical_bias="0" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:inputType="textEmailAddress"
        android:layout_height="46dp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".5"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/email_address"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:layout_height="46dp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".0"
        app:layout_constraintHorizontal_bias=".5"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:hint="@string/user_password"
        android:paddingStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/confirmUserPassword"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/confirm_new_password"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPassword"
        app:layout_constraintVertical_bias=".0"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:paddingTop="10dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmUserPassword"
        app:layout_constraintVertical_bias=".7"
        app:layout_constraintWidth_percent=".8" />



</androidx.constraintlayout.widget.ConstraintLayout>